# derive-into-owned

./: Cargo.toml
src/: helpers.rs  lib.rs  old_lib.rs
tests/: 01-parse.rs  02-reject-too-many-type-parameters.rs  02-reject-too-many-type-parameters.stderr  progress.rs  tuple_struct.rs
