[package]
name = "derive-into-owned"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
description = "Custom derives to help with types containing Cow fields"
license = "MIT"
repository = "https://github.com/koivunej/derive-into-owned"
homepage = "https://github.com/koivunej/derive-into-owned"
edition = "2018"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0.53"
